--- a/_posts/2019-05-10-ble-fun.md
+++ b/_posts/2019-05-10-ble-fun.md
@@ -13,7 +13,7 @@ Instead, I've had this BLE CTF that was flashed onto an esp32 for the last six m
 
 I've tried hacking BLE before and not made much headway, so I decided to find a blog to help guide me in the right direction. [This]("https://www.davidsopas.com/my-notes-on-hacking-ble-list-of-resources/") article here has some great resources as the end, including [this]("https://github.com/securing/docs/blob/master/whitepaper.pdf") whitepaper which I found tremendously helpful and gave me some good ideas on moving forward with the project. It also gave me an idea. Take notes and make them part of a blog post so I could refer back to the notes later. So without further adieu, here are my notes from reading the previously linked paper on BLE hacking.
 
-#### Notes from reading the paper
+#### *Notes from reading the paper*
 
 I don't know if this will be helpful for anyone but myself in the future, but below are my notes from reading the whitepaper I linked to above.
 
@@ -43,7 +43,7 @@ to install the tool that was released with the paper, just install npm and type 
 
 I did a little more digging and it appeared that I was able to use my built in Bluetooth to mess with stuff, but I'm going to talk to some people smarter than I am and see if I actually want to invest in a dongle. Again, if you have some advice and want to point me in the right direction, feel free to holler at me on Twitter.
 
-##### Additional resources for learning BLE hacking
+ *Additional resources for learning BLE hacking*
 
 I personally find watching videos to be a great way to learn, and the first blog post I linked to shared [this]("https://www.youtube.com/watch?v=oP6sx2cObrY") post and I found it really helpful. As I did for the whitepaper above, here are some notes I took from the talk. Again, mostly to help my future self, but also in the event that the person reading this also finds some benefit in the notes I took.
 
@@ -60,7 +60,7 @@ Suggests reading "Bluetooth Low Energy: The Developer's Handbook" by Robin Heydo
 
 Mike Ryan's research lacklustre.net/bluetooth and github.com/mikeryan
 
-#### Now to what I'm doing with the CTF
+#### *Now to what I'm doing with the CTF*
 
 [Here]("https://github.com/hackgnar/ble_ctf") is the github repo for the BLECTF which includes a link to buying a pre-flashes esp32 microcontroller if you want to play along at home. 
 
@@ -72,12 +72,12 @@ So I was able to access the device, but it required having the ble.recon module 
 
 I have been having trouble off and on getting gatttool to work, so I have to bring down and back up against my bluetooth interface, and I did that with the following commands
 
-`bash
-hciconfig hci0 down
-hciconfig hci0 up
-hcitool dev 
-hcitool lescan
-`
+>`
+>hciconfig hci0 down
+>hciconfig hci0 up
+>hcitool dev 
+>hcitool lescan
+>`
 
 *Then I was able to use gatttool to get the first flag* is what I arrogantly wrote, assuming that it was going to work. But it didn't work. Like so much of my experience with mucking around with BLE, it was flaky and didn't work right. So I decided to call it a day and go run some errands.
 
