--- a/_posts/2019-05-10-ble-fun.md
+++ b/_posts/2019-05-10-ble-fun.md
@@ -72,12 +72,12 @@ So I was able to access the device, but it required having the ble.recon module 
 
 I have been having trouble off and on getting gatttool to work, so I have to bring down and back up against my bluetooth interface, and I did that with the following commands
 
->
->hciconfig hci0 down
->hciconfig hci0 up
->hcitool dev 
->hcitool lescan
->
+
+hciconfig hci0 down
+hciconfig hci0 up
+hcitool dev 
+hcitool lescan
+
 
 *Then I was able to use gatttool to get the first flag* is what I arrogantly wrote, assuming that it was going to work. But it didn't work. Like so much of my experience with mucking around with BLE, it was flaky and didn't work right. So I decided to call it a day and go run some errands.
 
